--- a/css/comun.css
+++ b/css/comun.css
@@ -2,8 +2,20 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Teko:wght@600&family=Tillana:wght@400;800&family=Ubuntu&display=swap');
 header{
-    background-color: black;
+    background-color: black;    
+    width: 100%;  
+    position: sticky;
+    top:0; 
 }
+.sticky + main {
+    padding-top: 100px;
+}
+.sticky{
+    position: fixed;
+    top:0;
+    width: 100%;
+}
+
 /*menu responsive*/
 .menuresponsive{
     display: block;
@@ -110,10 +122,6 @@ body{
     position: relative;    
 }
 
-header{
-    width: 100%;
-    height: 10%;
-}
 .proyector{
     display: none;
 }
