--- a/css/comun.css
+++ b/css/comun.css
@@ -15,17 +15,40 @@ main{
 .noticias{
     border: 2px solid black;
     position: sticky;
-    top:0;
-    flex-grow: 1;  
+    top:0;     
     order: 2;  
-    width: 80px;
-    background-color:black;    
-    padding: 100px;
+    width: 50px;
+    background-color:black;        
     color: white;
-    display: flex;
-    justify-content: center;
+        
 }
-
+.content-p-noticias{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+}
+.noticias p{
+    position:sticky;    
+    top: 120px;
+    transform: rotate(270deg);
+    padding: 20px;
+}
+.noticias p:hover{
+    cursor: pointer;
+    display: block;
+}
+.contenedor-noticias{
+    position: sticky;
+    top: 0;
+    flex-grow: 1;
+    width: 80px;
+    padding: 200px;
+    background-color: black;
+    color: white;
+    text-align: justify;
+    display: none;
+}
 
 .contenedor-secundario{
     flex-grow: 4;
