--- a/css/comun.css
+++ b/css/comun.css
@@ -49,7 +49,9 @@ main{
     text-align: justify;
     display: none;
 }
-
+#cajaNoticias{
+    display: none;
+}
 .contenedor-secundario{
     flex-grow: 4;
 }
