--- a/css/comun.css
+++ b/css/comun.css
@@ -20,37 +20,30 @@ main{
     width: 50px;
     background-color:black;        
     color: white;
-        
+    height: 1000px;      
 }
-.content-p-noticias{
+
+
+.caja-disparador{
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100%;
+    min-height: 100%;
 }
-.noticias p{
+.caja-disparador p{
     position:sticky;    
-    top: 120px;
+    top: 200px;
+    left: 5px;
     transform: rotate(270deg);
     padding: 20px;
 }
-.noticias p:hover{
+#despliegue:hover{
     cursor: pointer;
     display: block;
 }
-.contenedor-noticias{
-    position: sticky;
-    top: 0;
-    flex-grow: 1;
-    width: 80px;
-    padding: 200px;
-    background-color: black;
-    color: white;
-    text-align: justify;
-    display: none;
-}
+
 #cajaNoticias{
-    display: none;
+    display: none;        
 }
 .contenedor-secundario{
     flex-grow: 4;
