--- a/css/comun.css
+++ b/css/comun.css
@@ -21,7 +21,10 @@ main{
     color: white;
     height: auto;  
 }
-    
+.contenido-caja-noticia{
+    padding: 5px;
+    font-family: 'Ubuntu';    
+}   
 
 
 .caja-disparador{
@@ -44,7 +47,9 @@ main{
 }
 
 #cajaNoticias{
-    display: none;        
+    display: none;    
+    padding-top: 50px;
+        
 }
 .contenedor-secundario{
     flex:4;
