--- a/css/comun.css
+++ b/css/comun.css
@@ -1,20 +1,10 @@
 /*Estilos comunes*/
 
 @import url('https://fonts.googleapis.com/css2?family=Teko:wght@600&family=Tillana:wght@400;800&family=Ubuntu&display=swap');
-header{
-    background-color: black;    
-    width: 100%;  
-    position: sticky;
-    top:0; 
-    z-index: 2;
-}
-main{
-    display: flex;
-    flex-direction: row;    
-}
+
+/* inicio estilos aside*/
 .noticias{
-    border: 2px solid black;    
-          
+    border: 2px solid black;              
     order: 2;  
     width: 30px;
     background-color:black;        
@@ -57,12 +47,25 @@ main{
 }
 
 #cajaNoticias{
-    display: none;   
-    
+    display: none;      
         
 }
+
+/*fin aside noticias*/
+/*estilos contenedor principal*/
 .contenedor-secundario{
     flex:4;
+}
+header{
+    background-color: black;    
+    width: 100%;  
+    position: sticky;
+    top:0; 
+    z-index: 2;
+}
+main{
+    display: flex;
+    flex-direction: row;    
 }
 /*menu responsive*/
 .menuresponsive{
@@ -371,6 +374,111 @@ img .mapa{
 }
 /*fin estilos presupuesto*/
 
+/*estilos galeria dinámica*/
+
+
+
+.contenedorPpal{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;    
+}
+
+.trabajo{
+    display: flex;
+    flex-direction: row;    
+    justify-content: center;
+    
+}
+.textos{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: left;
+    flex: 1;
+    padding-left: 10px;
+    padding-right: 20px;
+    padding-top: 10px;
+}
+.galeria{
+    flex: 3;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 10px;
+}
+.texto-imagen{
+    display: none;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: left;
+    
+}
+
+
+.contenedorPpal h1{
+    font-size: 3.5em;
+    font-weight: bolder;
+    padding: 20px;
+    font-family: 'Teko';
+}
+.texto-imagen p{
+    font-family: 'Ubuntu',monospace;
+    font-size: 0.7em;
+}
+.texto-imagen h5{
+    font-weight: bold;
+    font-size: 1.7em;
+    font-family: 'Teko';
+}
+.textos p{
+    font-family: 'Ubuntu',monospace;
+    font-size: 1.2em;
+}
+.textos h3{
+    font-size: 2.5em;
+    font-weight: bolder;
+    padding: 20px;
+    font-family: 'Teko';
+}
+
+.img {
+    width: 300px;
+    height: 300px;
+    background-size: cover; 
+}
+
+.img img{
+    width: 300px;
+    height: 300px;
+}
+.img:hover{
+    cursor: pointer;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*fin estilos galeria dinamica*/
+
 
 /*media querys*/
 /*tamaño ipad*/
@@ -424,7 +532,7 @@ img .mapa{
 .pop-up{
     background-color: white;
     border-radius: 3px;
-    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.3);
+    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.5);
 }
 
 .contenido-popup{
@@ -451,7 +559,7 @@ img .mapa{
     color: black;
     align-self: flex-end;
 }
-
+/*fin caja bienvenida*/
 
 
 /*tamaño laptop*/
