--- a/css/comun.css
+++ b/css/comun.css
@@ -383,6 +383,7 @@ img .mapa{
     flex-direction: column;
     align-items: center;
     justify-content: center;    
+    
 }
 
 .trabajo{
@@ -405,7 +406,10 @@ img .mapa{
     flex: 3;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    gap: 10px;
+    gap: 5px;
+    flex-grow: 3;
+    /*background-color: black;*/
+    align-items: center;
 }
 .texto-imagen{
     display: none;
@@ -449,18 +453,37 @@ img .mapa{
 }
 
 .img img{
-    width: 300px;
+    width: 330px;
     height: 300px;
 }
 .img:hover{
     cursor: pointer;
 }
+.ficha{
+    place-self: center;
+    position: relative;
+}
+.fichaOculta{
+    display: none;
+}
 
+.cruz-galeria{
+    display: none;
+    
+}
 
-
-
-
-
+.in{
+    display: block;
+    position: absolute;  
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    right: 10%;
+    top: 0;
+    width: 40px;
+    height: 40px;
+    background: black;
+}
 
 
 
