--- a/css/comun.css
+++ b/css/comun.css
@@ -298,7 +298,7 @@ img{
 
 .contenedor-contacto{
     display: flex;
-    flex-flow: column wrap;
+    flex-flow: column;
     justify-content: flex-start;
 }
 
@@ -340,14 +340,19 @@ img.icono{
     font-family: Ubuntu;
 }
 
+.contenedor-formulario-contacto{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
 #mapa{
+    /*position: relative;*/
     width: 100%;
-    height: 30%;
-    position: relative;
-    margin: auto;
+    height: 600px;
 }
 #ruta{
-    width: 50%;
+    width: 100%;
     height: auto;
     position: relative;
     margin: auto;
@@ -750,6 +755,12 @@ img.icono{
  
     .contenedor-contacto{
         flex-flow: row wrap;
+        justify-content: center;
+    }
+    .contenedor-formulario-contacto{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
         justify-content: center;
     }
     .general:first-child{
