--- a/css/galeria.css
+++ b/css/galeria.css
@@ -1,120 +1,111 @@
-/*estilos galeria dinámica*/
 
-@import url('https://fonts.googleapis.com/css2?family=Teko:wght@600&family=Tillana:wght@400;800&family=Ubuntu&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
-.contenedorPpal{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;    
-    
-}
-
-.trabajo{
-    display: flex;
-    flex-direction: row;    
-    justify-content: center;
-    
-}
-.textos{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: left;
-    flex: 1;
-    padding-left: 10px;
-    padding-right: 20px;
-    padding-top: 10px;
-}
-.galeria{
-    flex: 3;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 5px;
-    flex-grow: 3;
-    /*background-color: black;*/
-    align-items: center;
-}
-.texto-imagen{
-    display: none;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: left;
-    
-}
-
-
-.contenedorPpal h1{
-    font-size: 3.5em;
-    font-weight: bolder;
-    padding: 20px;
-    font-family: 'Teko';
-}
-.texto-imagen p{
-    font-family: 'Ubuntu',monospace;
-    font-size: 0.7em;
-}
-.texto-imagen h5{
-    font-weight: bold;
-    font-size: 1.7em;
-    font-family: 'Teko';
-}
-.textos p{
-    font-family: 'Ubuntu',monospace;
-    font-size: 1.2em;
-}
-.textos h3{
-    font-size: 2.5em;
-    font-weight: bolder;
-    padding: 20px;
-    font-family: 'Teko';
-}
-
-.img {
-    width: 300px;
-    height: 300px;
-    background-size: cover; 
-}
-
-.img img{
-    width: 330px;
-    height: 300px;
-}
-
-.ficha{
-    display: block;
-    place-self: center;
-    position: relative;
-    
-}
-.ficha:hover{
-    cursor: pointer;
-}
-.Oculta{
-    display: none;
-}
-
-
-.in:hover{
-    cursor: pointer;
-}
-
-.in{
-    display: none;
-    position: absolute;  
-    box-sizing: border-box;
+* {
     margin: 0;
     padding: 0;
-    right: 100%;
-    top: -10%;
-    width: 40px;
-    height: auto;
-    background: black;
-    font-size: 40px;
-    
+    box-sizing: border-box;
 }
-.in img{
-    width: 40px;
+
+
+.contenedor {
+    width: 90%;
+    max-width: 1200px;
+    overflow: hidden;
     margin: auto;
+    padding: 60px 0;
 }
-/*fin estilos galeria dinamica*/
+
+.subtitulo {
+    text-align: center;
+    font-weight: 700;
+    color: #9f8ad0;
+    margin-bottom: 40px;
+    font-size: 40px;
+}
+
+.gallery {
+    background: #f2f2f2;
+}
+
+.contenedor-galeria{
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
+.img-galeria {
+    object-fit:cover;   
+    width: 30%;
+    display: block;
+    margin-bottom: 15px;
+    box-shadow: 0 0 6px rgb(0, 0, 0, 0.5);
+    cursor: pointer;
+}
+
+.img-galeria:hover{
+    transition: all 0.3s ease-in-out;
+    transform: scale(1.1);
+}
+
+.imagen-light{
+    position: fixed;
+    background: rgba(0, 0, 0, 0.6);
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;    
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    transform: translate(100%);
+    transition: transform .2s ease-in-out;
+}
+.agregar-texto p{
+    font-family: monospace;
+    font-size: 1em;     
+}
+.agregar-texto h1{
+    font-size: 2.5em;
+    font-family: 'sans-serif';
+}
+.container{
+    background-color: whitesmoke;
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+    border-radius: 3px;
+    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.5);
+}
+
+.show{
+    transform: translate(0);
+}
+
+.agregar-texto {   
+    align-self: center;
+    padding-top: 20px;    
+    transition: transform .3s .2s;
+}
+.imagen{
+    object-fit: cover;
+    width: 100%;   
+    border-radius: 10px;
+    transform: scale(0);
+    transition: transform .3s .2s;
+}
+.showImage{
+    transform: scale(1);
+}
+
+.close {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    width: 40px;
+    cursor: pointer;
+    color:black;
+    font-size: 25px;
+}
