--- a/css/galeria.css
+++ b/css/galeria.css
@@ -91,7 +91,8 @@
 }
 .imagen{
     object-fit: cover;
-    width: 100%;   
+    width: 60%;  
+   
     border-radius: 10px;
     transform: scale(0);
     transition: transform .3s .2s;
@@ -108,4 +109,16 @@
     cursor: pointer;
     color:black;
     font-size: 25px;
+}
+@media only screen and (max-width:768px){
+    .imagen{
+        width: 100%;
+    }
+    .contenedor-galeria{
+        flex-direction: column;
+        align-items: center;
+    }
+    .img-galeria {
+        width: 60%;
+    }
 }
