--- a/css/comun.css
+++ b/css/comun.css
@@ -257,46 +257,122 @@ img{
 /*fin estilos home*/
 /*inicio estilos portfolio*/
 .portfolio{
-    flex-flow: column nowrap;
+    flex-flow: column;
     display: flex;        
     justify-content: flex-start;    
     margin: auto;    
 }
 .caja-portfolio{
     display: flex;
-    flex-flow: column nowrap;    
-}
-.visor{
-    display: none;
-}
-.miniaturas{
-    flex: 1;
-    display: flex;
-    flex-flow: row nowrap;
-    overflow-y: hidden;
-    overflow-x: auto;
-    width: auto;
-    height: auto;
-    padding: 10px;
-    white-space: nowrap;
-    scrollbar-width: none;    
-}
-
-.caja-miniatura{
-    width: auto;
-    height: auto;    
-    padding: 0px 5px 0px 5px;
-    display: block;
-}
-.miniatura{
-    width: 300px;
-    height: 100%;
-    margin: auto;
+    flex-flow: column;    
 }
 
 .resumen-trabajo{
     flex: 2;    
 }
+/*estilos galeria dinámica*/
+
+.trabajo{
+    display: flex;
+    flex-direction: column;    
+    justify-content: center;
+    
+}
+
+.contenedor {
+    width: 90%;
+    max-width: 1200px;
+    overflow: hidden;
+    margin: auto;
+    padding: 60px 0;
+}
+.galeria {
+    background: #f2f2f2;
+}
+
+.contenedor-galeria{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
+.img-galeria {
+    object-fit:cover;   
+    width: 50%;
+    display: block;
+    margin-bottom: 15px;
+    box-shadow: 0 0 6px rgb(0, 0, 0, 0.5);
+    cursor: pointer;
+}
+
+.img-galeria:hover{
+    transition: all 0.3s ease-in-out;
+    transform: scale(1.1);
+}
+
+.imagen-light{
+    position: fixed;
+    background: rgba(0, 0, 0, 0.6);
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;    
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    transform: translate(100%);
+    transition: transform .2s ease-in-out;
+}
+.agregar-texto p{
+    font-family: 'Ubuntu';
+    font-size: 1em;     
+}
+.agregar-texto h1{
+    font-size: 2.5em;
+    font-family: 'Teko';
+}
+.container{
+    background-color: whitesmoke;
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+    border-radius: 3px;
+    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.5);
+}
+
+.show{
+    transform: translate(0);
+}
+
+.agregar-texto {   
+    align-self: center;
+    padding-top: 20px;    
+    transition: transform .3s .2s;
+}
+.imagenGaleria{
+    object-fit: cover;
+    width: 100%;     
+    border-radius: 10px;
+    transform: scale(0);
+    transition: transform .3s .2s;
+}
+.showImage{
+    transform: scale(1);
+}
+
+.close {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    width: 40px;
+    cursor: pointer;
+    color:black;
+    font-size: 25px;
+}
+/*fin estilos galeria dinamica*/
 /*fin estilos portfolio*/
 /*inicio estilos contacto*/
 
@@ -402,167 +478,7 @@ legend{
 
 /*fin estilos presupuesto*/
 
-/*estilos galeria dinámica*/
 
-
-
-.contenedorPpal{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;    
-    
-}
-
-.trabajo{
-    display: flex;
-    flex-direction: row;    
-    justify-content: center;
-    
-}
-.textos{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: left;
-    flex: 1;
-    padding-left: 10px;
-    padding-right: 20px;
-    padding-top: 10px;
-}
-.galeria{
-    flex: 3;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 5px;
-    flex-grow: 3;
-    /*background-color: black;*/
-    align-items: center;
-}
-.texto-imagen{
-    display: none;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: left;
-    
-}
-
-
-.contenedorPpal h1{
-    font-size: 3.5em;
-    font-weight: bolder;
-    padding: 20px;
-    font-family: 'Teko';
-}
-.texto-imagen p{
-    font-family: 'Ubuntu',monospace;
-    font-size: 0.7em;
-}
-.texto-imagen h5{
-    font-weight: bold;
-    font-size: 1.7em;
-    font-family: 'Teko';
-}
-.textos p{
-    font-family: 'Ubuntu',monospace;
-    font-size: 1.2em;
-}
-.contenedor {
-    width: 90%;
-    max-width: 1200px;
-    overflow: hidden;
-    margin: auto;
-    padding: 60px 0;
-}
-
-
-.gallery {
-    background: #f2f2f2;
-}
-
-.contenedor-galeria{
-    display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-}
-
-.img-galeria {
-    object-fit:cover;   
-    width: 30%;
-    display: block;
-    margin-bottom: 15px;
-    box-shadow: 0 0 6px rgb(0, 0, 0, 0.5);
-    cursor: pointer;
-}
-
-.img-galeria:hover{
-    transition: all 0.3s ease-in-out;
-    transform: scale(1.1);
-}
-
-.imagen-light{
-    position: fixed;
-    background: rgba(0, 0, 0, 0.6);
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;    
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    transform: translate(100%);
-    transition: transform .2s ease-in-out;
-}
-.agregar-texto p{
-    font-family: monospace;
-    font-size: 1em;     
-}
-.agregar-texto h1{
-    font-size: 2.5em;
-    font-family: 'sans-serif';
-}
-.container{
-    background-color: whitesmoke;
-    display: flex;
-    flex-direction: column-reverse;
-    justify-content: center;
-    align-items: center;
-    border-radius: 3px;
-    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.5);
-}
-
-.show{
-    transform: translate(0);
-}
-
-.agregar-texto {   
-    align-self: center;
-    padding-top: 20px;    
-    transition: transform .3s .2s;
-}
-.imagenGaleria{
-    object-fit: cover;
-    width: 60%;  
-   
-    border-radius: 10px;
-    transform: scale(0);
-    transition: transform .3s .2s;
-}
-.showImage{
-    transform: scale(1);
-}
-
-.close {
-    position: absolute;
-    top: 15px;
-    right: 15px;
-    width: 40px;
-    cursor: pointer;
-    color:black;
-    font-size: 25px;
-}
-/*fin estilos galeria dinamica*/
 /*bienvenida*/
 
 .bandaSuperior{
@@ -661,6 +577,10 @@ legend{
 /*tamaño laptop*/
 @media only screen and (min-width:1024px){
 
+    .trabajo{
+        flex-direction: row;
+    }
+
     #opcion{
         display: none;
     }
@@ -733,36 +653,6 @@ legend{
         padding: 10px;
         line-height: 2;
     }
-    .visor{
-        display: flex;
-        flex-direction: column;
-        flex-wrap: nowrap;
-        align-items: flex-end;
-        position: relative;
-        margin-right: 30px;
-        height: 600px;
-        flex: 2;
-
-    }
-    .imagen{
-        width: 100%;
-        height: 100%;
-        padding: 10px;
-        border: 2px solid black;
-        display: block;
-    }
-    .portfolio{
-        flex-flow: column wrap;
-        display: flex;        
-        justify-content: flex-start;           
-    }    
-    
-    .caja-portfolio{
-        display: flex;
-        flex-flow: row wrap; 
-        padding-bottom: 100px;
-           
-    }
     .resumen-trabajo{
         display: flex;
         margin-top: 100px;
@@ -772,34 +662,6 @@ legend{
         align-self: flex-end;
         margin-right: 50px;
     }
-    ul.slider li{
-        opacity: 0;
-        transition: opacity 0.5s;
-        position: absolute;
-        left: 0;
-        top: 0;
-    }
-    ul.slider li:first-child{
-        opacity: 1;
-    }
-    ul.slider li:target{
-        opacity: 1;
-    }   
-
-    .menu-slider{
-        display: flex;
-        flex-direction: column;
-       
-        position: absolute;
-        right: 100%;
-              
-    }
-    
-    .thumbnails{
-        width: 100px;
-        height: 100px;
-        
-    }
     
     .contenedor-contacto{
         flex-flow: row wrap;
@@ -807,7 +669,6 @@ legend{
     .general{
         padding: 20px;
     }
-
     .caja-formulario:last-child{
         align-self: flex-end;
     }
@@ -839,7 +700,15 @@ legend{
     .bienvenida{        
         flex-direction: row;
     }
-    
+    .contenedor-galeria{
+        flex-direction: row;
+    }
+    .img-galeria{
+        width: 30%;
+    }
+    .imagenGaleria{
+        width: 60%;
+    }
 }
     
 
