--- a/css/comun.css
+++ b/css/comun.css
@@ -276,6 +276,8 @@ img{
     display: flex;
     flex-direction: column;    
     justify-content: center;
+    flex: 1;    
+    align-items: center;
     
 }
 
@@ -287,7 +289,9 @@ img{
     padding: 60px 0;
 }
 .galeria {
-    background: #f2f2f2;
+    background: #f2f2f2;    
+    display: flex;
+    flex: 2;
 }
 
 .contenedor-galeria{
@@ -316,14 +320,15 @@ img{
     background: rgba(0, 0, 0, 0.6);
     width: 100%;
     height: 100%;
-    top: 0;
+    top: 5%;
     left: 0;    
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     transform: translate(100%);
-    transition: transform .2s ease-in-out;
+    transition: transform .3s ease-in-out;
+    z-index: 1;
 }
 .agregar-texto p{
     font-family: 'Ubuntu';
@@ -350,14 +355,14 @@ img{
 .agregar-texto {   
     align-self: center;
     padding-top: 20px;    
-    transition: transform .3s .2s;
+    transition: transform .4s .3s;
 }
 .imagenGaleria{
     object-fit: cover;
     width: 100%;     
     border-radius: 10px;
     transform: scale(0);
-    transition: transform .3s .2s;
+    transition: transform .4s .3s;
 }
 .showImage{
     transform: scale(1);
@@ -389,6 +394,7 @@ img.icono{
     display: flex;
     flex-direction: column;  
     align-items: flex-start;    
+    flex-grow: 4;
 }
 .contacto{
     display: flex;
@@ -545,7 +551,9 @@ legend{
     .img-galeria {
         width: 60%;
     }
-
+    /*.galeria{
+        height: 800px;
+    }*/
     .noticias{
        /* flex-grow:4;*/
         width: 50px;        
@@ -654,13 +662,11 @@ legend{
         line-height: 2;
     }
     .resumen-trabajo{
-        display: flex;
-        margin-top: 100px;
+        display: flex;        
         flex: 1;       
         padding: 50px;
-        display: block;
-        align-self: flex-end;
-        margin-right: 50px;
+        display: block;        
+        
     }
     
     .contenedor-contacto{
@@ -709,6 +715,7 @@ legend{
     .imagenGaleria{
         width: 60%;
     }
+    
 }
     
 
