--- a/css/comun.css
+++ b/css/comun.css
@@ -492,7 +492,31 @@ legend{
 }
 
 /*fin estilos presupuesto*/
+/* estilos login*/
+.contenedor-login{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: auto;
+}
+.caja-formulario-login{
+    display: flex;
+    flex-direction: column;
+    
+}
+.formularioLogin{
+    width: 100%;
+}
 
+.caja-botones-login{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 40px;
+    justify-content: center;
+}
+
+/*fin estilos login*/
 
 /*bienvenida*/
 
@@ -546,10 +570,13 @@ legend{
 /*fin caja bienvenida*/
 
 
+
 /*media querys*/
 /*tamaño ipad*/
 @media only screen and (min-width:768px){
-
+    .contenedor-login{
+        min-height: 600px;
+    }
     .imagenGaleria{
         width: 100%;
     }
@@ -593,8 +620,12 @@ legend{
 
 /*tamaño laptop*/
 @media only screen and (min-width:1024px){
-
-    #caja-login{
+    .contenedor-login{
+        justify-content: space-between;
+        width: 60%;
+        min-height: 600px;
+    }
+    .caja-login{
         color: #f2f2f2;
     }
     
@@ -682,9 +713,7 @@ legend{
         display: block;        
         
     }
-    .color{
-        color: #f2f2f2;
-    }
+    
     .contenedor-contacto{
         flex-flow: row wrap;
     }
