--- a/css/comun.css
+++ b/css/comun.css
@@ -581,7 +581,39 @@ legend{
     width: 100%;
     margin: 5px;
 }
-
+/*caja citas*/
+.divTable{
+	display: table;
+	width: 90%;
+    font-family: 'Ubuntu';
+    text-align: center;
+}
+.divTableRow {
+	display: table-row;
+}
+.divTableHeading {
+	background-color: #EEE;
+	display: table-header-group;
+}
+.divTableCell, .divTableHead {
+	border: 1px solid #999999;
+	display: table-cell;
+	padding: 3px 10px;
+}
+.divTableHeading {
+	background-color: #EEE;
+	display: table-header-group;
+	font-weight: bold;
+}
+.divTableFoot {
+	background-color: #EEE;
+	display: table-footer-group;
+	font-weight: bold;
+}
+.divTableBody {
+	display: table-row-group;
+}
+/*fin caja citas*/ 
 /*media querys*/
 /*tamaño ipad*/
 @media only screen and (min-width:768px){
