Edicion de citas lista a falta de restriccion de las 72 horas, pero la consulta esta resulta

--- a/css/comun.css
+++ b/css/comun.css
@@ -427,9 +427,15 @@ img.icono{
     color: white;
     font-family: 'Tillana';
     border-radius: 0;
-    border: 0;
-    
+    border: 0;    
 }
+
+input[type="button"]:disabled{
+    background-color: #999999;
+
+}
+
+
 .botones{        
     padding: 5%;
 }
