--- a/css/comun.css
+++ b/css/comun.css
@@ -656,7 +656,7 @@ legend{
     margin:5px;
  }
 
-.divTableUsuarios,.divTableCitas,.divTableProyectos{
+.divTableUsuarios,.divTableCitas,.divTableProyectos,.divTableNoticias{
 	display: none;
 	width: 100%;
     font-family: 'Ubuntu';
@@ -694,7 +694,13 @@ legend{
     cursor: pointer;
     background-color: #999999;
 }
-.boxPerfil,.boxCitas, .boxProyectos{
+.boxProyectos,.boxNoticias{
+    display: none;
+    flex-flow: column;
+    flex: 1;
+    width: 100%;
+}
+.boxPerfil,.boxCitas{
     display: flex;
     flex-flow: column;
     flex: 1;
@@ -702,7 +708,7 @@ legend{
 .boxProyectos{
     border-bottom: 1px solid #999999;
 }
-.boxCitasContent , .boxPerfilContent, .boxProyectoContent{
+.boxCitasContent , .boxPerfilContent, .boxProyectoContent,.boxNoticiasContent{
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -818,7 +824,7 @@ legend{
         margin-top: 20px;      
 
     }
-    .divTableProyectos,.divTableCitas{
+    .divTableProyectos,.divTableCitas,.divTableNoticias{
         margin-left: 5px;
         margin-right: 5px;
         padding: 10px;
