--- a/css/comun.css
+++ b/css/comun.css
@@ -542,7 +542,7 @@ legend{
     
 }
 .formularioLogin{
-    width: 100%;
+    width: 80%;
     margin-bottom: 30px;
 }
 
@@ -628,11 +628,7 @@ legend{
     justify-content: center;
     width: 100%;
 }
-.contenidoAdmin{
-    display: flex;
-    flex-direction: column;
-    flex: 3;
-}
+
 .aside-botenes{
 
     display: flex;
@@ -681,11 +677,7 @@ legend{
     
     font-weight: bold;
 }
-.divTableFoot {
-	background-color: #EEE;
-	display: table-footer-group;
-	font-weight: bold;
-}
+
 .divTableBody {
 	display: table-row-group;
 }
@@ -704,15 +696,14 @@ legend{
     display: flex;
     flex-flow: column;
     flex: 1;
+    align-items: center;
 }
 .boxProyectos{
     border-bottom: 1px solid #999999;
 }
-.boxCitasContent , .boxPerfilContent, .boxProyectoContent,.boxNoticiasContent{
+.boxContent{
     display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
+    flex-direction: column;    
     margin-top: 20px;
     margin-bottom: 20px;
     margin-left: 10px; 
@@ -742,6 +733,19 @@ legend{
     color: #999999;
 }
 /*fin caja citas*/ 
+
+.boxDatosAcceso{
+    margin-top: 20px;
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    width: 70%;
+    
+}
+.respuestaLogin{
+    font-family: Ubuntu;
+    font-size: 0.6rem;
+}
 /*media querys*/
 
 
@@ -820,11 +824,8 @@ legend{
         margin-top: 30px;
     }    
 
-    .divTableUsuarios{
-        margin-top: 20px;      
-
-    }
-    .divTableProyectos,.divTableCitas,.divTableNoticias{
+    
+    .divTableCitas{
         margin-left: 5px;
         margin-right: 5px;
         padding: 10px;
@@ -857,11 +858,7 @@ legend{
         margin-bottom: 20px;
         flex: 1;
     }
-    .contenidoAdmin{
-        display: flex;
-        flex-direction: column;
-        flex: 8;
-    }
+    
     .contenedorCajasAdmin{
         display: flex;
         flex-flow: column;
