--- a/css/comun.css
+++ b/css/comun.css
@@ -763,7 +763,7 @@ legend{
 .card{
     display: flex;
     flex-direction: column;
-    height: auto;
+    min-height: 400px;
     position: relative;
     width: 100%;
     margin-bottom: 30px;
@@ -773,9 +773,10 @@ legend{
     justify-content: space-between;
     font-family: 'Teko';
     font-size: 1.5rem;
+    width: 90%;
 }
 .card-title > h4{
-    font-size: 2rem;
+    font-size: 1.8rem;
 }
 .card-title:hover{
     cursor: pointer;
@@ -787,7 +788,17 @@ legend{
     flex-direction: column;
     position: absolute;
     top: 0px;
+    
 }
+
+.card-reveal > p {
+    font-size: 0.7rem;
+}
+.card-reveal > h3 {
+    font-size: 1.5rem;
+}
+
+
 .img-card{
     
     width: 100%;
@@ -812,7 +823,16 @@ legend{
 
 @media only screen and (min-width:768px){
 
+    .card-title > h4{
+        font-size: 2rem;
+    }
     
+    .card-reveal > p {
+        font-size: 1rem;
+    }
+    .card-reveal > h3 {
+        font-size: 2rem;
+    }
     .caja-botones>h2{
         /* font-size: 2.5em;
          font-weight: bold;
