--- a/css/comun.css
+++ b/css/comun.css
@@ -763,10 +763,14 @@ legend{
 .card{
     display: flex;
     flex-direction: column;
-    min-height: 400px;
+    min-height: 500px;
     position: relative;
     width: 100%;
     margin-bottom: 30px;
+    border: 1px solid #999999;
+    margin: 5px;
+    /*justify-content: center;*/
+    align-items: center;
 }
 .card-title{
     display: flex;
