--- a/css/comun.css
+++ b/css/comun.css
@@ -47,7 +47,7 @@
 }
 
 #cajaNoticias{
-    display: none;      
+    display: block;      
         
 }
 
@@ -971,11 +971,27 @@ legend{
     #opcion{
         display: none;
     }
-    .noticias{
-        /*flex-grow:2;*/
-        width: 80px;        
-    }
 
+
+    .noticias{
+       flex-grow: 3;
+        /*width: 80px;        */
+    }
+    .caja-disparador{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        min-height: 100%;
+    }
+    #cajaNoticias{
+        display: block;
+        padding-top: 0px;
+    }
+    .caja-disparador p{
+        align-self: start;
+        top: 0px;
+        transform: rotate(0deg);
+    }
     .menuresponsive{
         display: none;
     }
