--- a/css/comun.css
+++ b/css/comun.css
@@ -15,6 +15,11 @@
     padding: 5px;
     font-family: 'Ubuntu';    
 }   
+.contenido-caja-noticia h3:hover{
+    font-style: italic;
+    padding-left: 10px;
+    cursor: pointer;
+}
 .contenido-caja-noticia a{
     color: white;
 }
@@ -216,7 +221,7 @@ body{
 
 footer{
     width: 100%;
-    height: 10%;  
+  
     background-color: black;
     display: flex;
     align-items: center;
